--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,15 +1,20 @@
 <div class="row">
-    <div class="col-6">
+    <div class="col-6 burgerList">
+        <h4>The Choice of Burgers</h4>
+
     {{#each availBurgerData}}
-        <span class="available-burger">{{burger_name}}</span>
-        <a href='/devour/{{id}}' class="btn devour-button" type="button">Devour <i class="fas fa-hamburger"></i></a>
-        <br>
+        <div class="mb-3">
+            <span class="available-burger">{{burger_name}}</span>
+            <a href='/devour/{{id}}' class="btn devour-button" type="button">Devour <i class="fas fa-hamburger"></i></a>
+        </div>
     {{/each}}
+
     </div>
     
     <div class="col-6">
+        <h4>You Have Eaten</h4>
     {{#each devBurgerData}}
-        <div class="devour-burger">{{burger_name}}</div>
+        <div class="devour-burger mb-3">{{burger_name}}</div>
     {{/each}}
     </div>
 </div>
