--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
 <body>
     <div class="jumbotron text-center">
         <img src='https://static.thenounproject.com/png/98462-200.png' alt=''/>
-        <h1>Welcome to Eat-Da-Burger!</h1>
+        <h1 style="color:black">Welcome to Eat-Da-Burger!</h1>
     </div>
     <main class="container text-center">
         <form class="row mb-5" action="/" method="POST">
@@ -22,8 +22,12 @@
                 <button type="submit" class="btn submit-button">Submit</button>
             </div>
         </form>
-
     {{{body}}}
-    </main>    
+    </main>
+
+    <footer class="footer">
+        <p style="margin-bottom:0;">© 2020 Eat-Da-Burger</p>
+    </footer>
+
 </body>
 </html>
